fix(grid): include padding in max-width and align with nav bar (#1120)
Relates to #867,
https://github.com/SchwarzIT/onyx/issues/867#issuecomment-2114800579

After a talk with @jannick-ux we came to the conclusion that:
- width in Figma are meant to include the padding so if grid max width
is 1440px, the actual component width is 1312px so in total: 1312px
width + 2 * 64px padding = 1440px.

What I did:
- fix grid to use `box-sizing: border-box;` instead of `content-box`
- add screenshot tests which shows a full app layout with nav bar and
page content to test that both are aligned with each other
- add grid demo page to the alpha demo app so we can play around with it
and see it in action

--- a/packages/sit-onyx/src/styles/grid.scss
+++ b/packages/sit-onyx/src/styles/grid.scss
@@ -22,7 +22,7 @@ $gridVariants: (
     // Its called margin in the UX concept. So we keep that name for consistency, even when it is implemented through a padding.
     padding: var(--onyx-grid-margin);
     // often web projects override the default box-sizing, but it is important for the max-width and alignment to work correctly
-    box-sizing: content-box;
+    box-sizing: border-box;
     max-width: var(--onyx-grid-max-width, none);
     margin-inline: var(--onyx-grid-margin-inline);
   }
